@@ -1,3 +1,9 @@
+Thu Aug 05 02:14:15 2004  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: when plotting surfaces, the expression may return
+	  something which has different number of arguments, so allow
+	  rerunning the function if this happens
+
 Thu Aug 05 01:28:43 2004  George Lebl <jirka@5z.com>
 
 	* gtkextra/Makefile.am: fix building by adding all the needed
